{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 166,
  "lineage": "111201bb-fe68-31fd-0fcf-24f3ba0a2767",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nimesa-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fb9d5c721566c65",
            "arn": "arn:aws:ec2:eu-west-2:968514664097:instance/i-07a3d681bf45ceef2",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0124401a0a75b2d58",
                "volume_size": 5,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a3d681bf45ceef2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e813e7aa423fe06b",
            "private_dns": "ip-10-0-1-242.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_ip": "35.178.118.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c01959d1a1c2e3d0",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-076aea74f4b995d94",
            "tags": {
              "Name": "Nimesa-instance",
              "purpose": "assignment"
            },
            "tags_all": {
              "Name": "Nimesa-instance",
              "purpose": "assignment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0806f0326d0ed7360"
            ]
          },
          "dependencies": [
            "aws_security_group.Nimesa-sg",
            "aws_subnet.Nimesa-public-subnet",
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Nimesa-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:internet-gateway/igw-0a65b0a92bdb888d5",
            "id": "igw-0a65b0a92bdb888d5",
            "owner_id": "968514664097",
            "tags": {
              "purpose": "assignment"
            },
            "tags_all": {
              "purpose": "assignment"
            },
            "vpc_id": "vpc-045a49d41b4bc0fda"
          },
          "dependencies": [
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Nimesa-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:route-table/rtb-0e13c0cdf4a5b1487",
            "id": "rtb-0e13c0cdf4a5b1487",
            "owner_id": "968514664097",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "purpose": "assignment"
            },
            "tags_all": {
              "purpose": "assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a49d41b4bc0fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Nimesa-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:route-table/rtb-07dc81f94b19c86a4",
            "id": "rtb-07dc81f94b19c86a4",
            "owner_id": "968514664097",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a65b0a92bdb888d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "purpose": "assignment"
            },
            "tags_all": {
              "purpose": "assignment"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a49d41b4bc0fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Nimesa-igw",
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nimesa-private-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e390c699ec316d31",
            "route_table_id": "rtb-0e13c0cdf4a5b1487",
            "subnet_id": "subnet-0649d220e8dd1b2aa"
          },
          "dependencies": [
            "aws_route_table.Nimesa-private-route-table",
            "aws_subnet.Nimesa-private-subnet",
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nimesa-public-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0880a5dcde750710e",
            "route_table_id": "rtb-07dc81f94b19c86a4",
            "subnet_id": "subnet-076aea74f4b995d94"
          },
          "dependencies": [
            "aws_internet_gateway.Nimesa-igw",
            "aws_route_table.Nimesa-public-route-table",
            "aws_subnet.Nimesa-public-subnet",
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nimesa-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:security-group/sg-0806f0326d0ed7360",
            "description": "security-group-for-EC2-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0806f0326d0ed7360",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Nimesa-sg",
            "name_prefix": "",
            "owner_id": "968514664097",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nimesa-SG"
            },
            "tags_all": {
              "Name": "Nimesa-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-045a49d41b4bc0fda"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Nimesa-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:subnet/subnet-0649d220e8dd1b2aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0649d220e8dd1b2aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "968514664097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "purpose": "assignment"
            },
            "tags_all": {
              "purpose": "assignment"
            },
            "vpc_id": "vpc-045a49d41b4bc0fda"
          },
          "dependencies": [
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Nimesa-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:subnet/subnet-076aea74f4b995d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076aea74f4b995d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "968514664097",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "purpose": "assignment"
            },
            "tags_all": {
              "purpose": "assignment"
            },
            "vpc_id": "vpc-045a49d41b4bc0fda"
          },
          "dependencies": [
            "aws_vpc.Nimesa-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Nimesa-assignment-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:968514664097:vpc/vpc-045a49d41b4bc0fda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056544a4ec7167254",
            "default_route_table_id": "rtb-016517e62b5c6c113",
            "default_security_group_id": "sg-03f76212cb6603f78",
            "dhcp_options_id": "dopt-0d1e0a43118323ccc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045a49d41b4bc0fda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016517e62b5c6c113",
            "owner_id": "968514664097",
            "tags": {
              "purpose": "assignment"
            },
            "tags_all": {
              "purpose": "assignment"
            }
          }
        }
      ]
    }
  ]
}